Adding swift code

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 node_modules
 npm-debug.log
 .DS_Store
+ios/RNCalendarEvents.xcodeproj/xcuserdata/ray.xcuserdatad/xcschemes/xcschememanagement.plist
