--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ node_modules
 npm-debug.log
 .DS_Store
 ios/RNCalendarEvents.xcodeproj/xcuserdata/ray.xcuserdatad/xcschemes/xcschememanagement.plist
+yarn.lock
